fix: fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --heading-3: 55 65 81;
 }
 
-html.dark{
+.dark {
   --color-bg: 3 7 18;
   --color-box: 17 24 39;
   --box-border: 243 244 246 / 0.1;
@@ -25,21 +25,17 @@ html.dark{
   .bg-body {
     background-color: rgb(var(--color-bg));
   }
-
   .bg-box-bg {
     background-color: rgb(var(--color-box));
   }
-
   .text-heading-1 {
-    background-color: rgb(var(--heading-1));
+    color: rgb(var(--heading-1));
   }
-
   .text-heading-2 {
-    background-color: rgb(var(--heading-2));
+    color: rgb(var(--heading-2));
   }
-
   .text-heading-3 {
-    background-color: rgb(var(--heading-3));
+    color: rgb(var(--heading-3));
   }
 }
 
